argocd/infra/renovate/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: renovate-app
  name: renovate-httproute
  namespace: renovate
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - renovate.yanello.net
  rules:
    - backendRefs:
        - name: mend-renovate-ce
          group: ""
          kind: Service
          namespace: renovate
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
